# stamp

./: .gitignore  CHANGELOG.md  README.md  REQUIREMENTS.md  pyproject.toml
app/: main.py
app/services/accounts/models/: __init__.py  user.py
config/fixtures/: AdminPanelParameters.yml  CompanyParameters.yml  GeneralParameters.yml  SiteParameters.yml
config/translations/: custom.pot  ramifice.pot
config/translations/custom/en/LC_MESSAGES/: messages.mo  messages.po
config/translations/custom/ru/LC_MESSAGES/: messages.mo  messages.po
config/translations/ramifice/en/LC_MESSAGES/: messages.mo  messages.po
config/translations/ramifice/ru/LC_MESSAGES/: messages.mo  messages.po
public/static/admin/css/: 337.a692821e.css  399.9969b6d6.css  539.e8220a3d.css  57.8b6d1fe6.css  app.07cf1efb.css  chunk-vendors.e1c82251.css
public/static/admin/js/: 337.bdb73f09.js  337.bdb73f09.js.map  399.b9cb2990.js  399.b9cb2990.js.map  57.3a16ff38.js  57.3a16ff38.js.map  674.f3fcbd6a.js  674.f3fcbd6a.js.map  683.ae17a2d2.js  683.ae17a2d2.js.map  826.717c1c2c.js  826.717c1c2c.js.map  app.e5c4cf36.js  app.e5c4cf36.js.map  chunk-vendors.9a1a9364.js
services/accounts/: pyproject.toml
services/accounts/src/accounts/: __init__.py
services/accounts/src/accounts/models/: user.py
src/: main.py  run_server.py
src/app/: config.py  main.py  models.py  router.py  utils.py
src/app/services/: __init__.py
src/app/services/accounts/: __init__.py  router.py
src/app/services/accounts/models/: __init__.py  user.py
src/app/services/admin/: __init__.py  router.py
src/app/services/admin/models/: __init__.py  admin_panel.py  company.py  parameters.py  site.py
src/app/services/auth/: __init__.py  router.py
src/app/services/auth/models/: __init__.py
src/app/services/home/: __init__.py  router.py
src/app/services/home/models/: __init__.py
src/stamp/: main.py
templates/: index.html  index.html.j2  sitemap.xml.j2
tests/accounts/: test_user.py
