[project]
name = "app"
version = "0.1.0"
description = "A template project for creating web applications."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "ramifice>=0.5.9",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = ["mypy>=1.16.1", "ruff>=0.12.0"]

[tool.uv]
package = false
compile-bytecode = true

[tool.uv.sources]
# services = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
fix = true
line-length = 100
required-version = ">=0.12.0"
src = ["src", "packages"]
include = [
    "*.py",
    "*.pyi",
    "*.ipynb",
    "**/pyproject.toml",
    "src/**/*.py",
    "packages/**/*.py",
]

[tool.ruff.lint]
select = ["D"]
ignore = ["D417", "D206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
files = ["src/**/*.py", "packages/**/*.py"]
disable_error_code = ["type-arg", "no-any-return", "attr-defined", "index"]

[[tool.mypy.overrides]]
module = ["packages/models/tests.*"]
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "no-untyped-call",
    "func-returns-value",
    "union-attr",
]
