[project]
name = "app"
version = "0.1.0"
description = "A template project for creating web applications."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "ramifice>=0.5.9",
    "uvicorn[standard]>=0.35.0",
    "accounts",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false
compile-bytecode = true

[tool.uv.sources]
accounts = { workspace = true }

[tool.uv.workspace]
members = ["services/*"]

[tool.ruff]
fix = true
line-length = 100
required-version = ">=0.12.0"
src = ["src", "services", "tests"]
include = [
    "*.py",
    "*.pyi",
    "*.ipynb",
    "**/pyproject.toml",
    "src/**/*.py",
    "services/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["D"]
ignore = ["D417", "D206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
files = ["src/**/*.py", "services/**/*.py", "tests/**/*.py",]
disable_error_code = ["type-arg", "no-any-return", "attr-defined", "index"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "no-untyped-call",
    "func-returns-value",
    "union-attr",
]
