[project]
name = "stamp"
version = "0.1.0"
description = "A template project for creating web applications."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "orjson>=3.10.18",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "ramifice>=0.5.9",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = ["mypy>=1.16.1", "pytest>=8.4.1", "pytest-asyncio>=1.0.0", "ruff>=0.12.0"]

[tool.uv]
package = false

[tool.ruff]
fix = true
line-length = 100
required-version = ">=0.12.0"
src = ["src", "tests"]
include = [
    "*.py",
    "*.pyi",
    "*.ipynb",
    "**/pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["D"]
ignore = ["D417", "D206"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
files = ["src/**/*.py", "tests/**/*.py"]
disable_error_code = ["type-arg", "no-any-return", "attr-defined", "index"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "no-untyped-call",
    "func-returns-value",
    "union-attr",
]
